--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <section class="home bd_grid" id="home">
         <div class="home_data" data-aos="fade-down">
           <h1 class="home_title">
-            Hi, <br />I'm <span class="home_title-color">Deepti</span
-            ><br />Full Stack Web Developer
+            Hi, I'm <span class="home_title-color">Deepti</span
+            >Full Stack Web Developer
           </h1>
           <a href="" download class="button"> Resume</a>
         </div>
