--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       <section class="home bd_grid" id="home">
         <div class="home_data" data-aos="fade-down">
           <h1 class="home_title">
-            Hi, I'm <span class="home_title-color">Deepti</span
-            >Full Stack Web Developer
+            Hi,<br/> I'm <span class="home_title-color">Deepti <br/> </span
+            > Full Stack Web Developer
           </h1>
-          <a href="" download class="button"> Resume</a>
+          <a href="https://drive.google.com/file/d/1xy3aAL3FlkkoVInrounDqTHa8Zrla2ye/view?usp=share_link" download class="button"> Resume</a>
         </div>
 
         <div class="home_social">
@@ -1031,7 +1031,7 @@ margin-top: 20px;
 </style>
 
       <!-- WORK SECTION -->
-      <!-- <section class="work section" id="work">
+      <section class="work section" id="work">
         <h2 class="section-title" data-aos="fade-down">Portfolio</h2>
 
         <div
@@ -1040,18 +1040,16 @@ margin-top: 20px;
           data-aos-delay="250"
         >
           <div class="work_img">
-            <img src="./assets/img/work1.jpg" alt="" />
-            <h3>FIT ZONE</h3>
+            <img src="./assets/img/work1.png" alt="" />
+            <h3>naukari.com</h3>
             <div class="desc_div" >
 
-              <p>    This is FitClub App where a usercan experience all the
-                information about the Zym technologies and user can choice a
-                plan to join and This was a Single PageResponse Application</p>
+              <p>Naukri.com is an Indian employment website where anyone can find their dream job. This is an Collaborative project which is created by our 4 members team..  </p>
                 <h5 class="tech">Tech Stack</5>
                   <div class="tech_stack"><img src="./assets/img/HTML.png"  alt="" />
                     <img src="./assets/img/css.png" alt="" />
                     <img src="./assets/img/js.png" alt="" />
-                    <img src="./assets/img/react.png" alt="" />
+                    <!-- <img src="./assets/img/react.png" alt="" /> -->
                     
                   </div>
                 </div>
@@ -1059,7 +1057,7 @@ margin-top: 20px;
                   <button class="button1" >
 
                     <a
-                    href="https://github.com/kalesha58/fitzone-fitmore"
+                    href="https://github.com/alokkr11/snugly-lip-3676"
                     className="btn"
                     target="_blank"
                     >
@@ -1069,7 +1067,7 @@ margin-top: 20px;
                 <button class="button2" >
 
                   <a
-                  href="https://kareemfitzone.pages.dev/"
+                  href="https://naukricom-clone.netlify.app/"
                   className="btn btn-primary"
                   target="_blank"
                   >
@@ -1079,7 +1077,7 @@ margin-top: 20px;
               </div>
           </div>
 
-          <div class="work_img">
+          <!-- <div class="work_img">
             <img src="./assets/img/work2.jpg" alt="" />
             <h3>Moon Movie Hub</h3>
             <div class="desc_div" >
@@ -1282,9 +1280,9 @@ margin-top: 20px;
                 </a>
               </button>
               </div>
-          </div>
+          </div> -->
         </div>
-      </section> -->
+      </section>
 
       <!-- CONTACT SECTION -->
 
@@ -1294,7 +1292,7 @@ margin-top: 20px;
         <div class="contact_container bd_grid">
           <div class="contact__info">
             <h3 class="contact__subtitle">EMAIL</h3>
-            <span class="contact__text">deeptibaghel@gmail.com</span>
+            <span class="contact__text">deeptibaghel5@gmail.com</span>
   
             <h3 class="contact__subtitle">PHONE</h3>
             <span class="contact__text">+91 7303045108</span>
