--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@ margin-top: 20px;
             <h3>naukari.com</h3>
             <div class="desc_div" >
 
-              <p>Naukri.com is an Indian employment website where anyone can find their dream job. This is an Collaborative project which is created by our 4 members team..  </p>
+              <p>This is the clone of the Naukri.com website, Naukri.com is a recruitment platform that provides hiring-related services to corporates/ recruiters, placement agencies and job seekers in India. This is an Collaborative project which is created by our 4 members team...  </p>
                 <h5 class="tech">Tech Stack</5>
                   <div class="tech_stack"><img src="./assets/img/HTML.png"  alt="" />
                     <img src="./assets/img/css.png" alt="" />
@@ -1077,16 +1077,12 @@ margin-top: 20px;
               </div>
           </div>
 
-          <!-- <div class="work_img">
-            <img src="./assets/img/work2.jpg" alt="" />
-            <h3>Moon Movie Hub</h3>
+          <div class="work_img">
+            <img src="./assets/img/work2.png" alt="" />
+            <h3>Classic World</h3>
             <div class="desc_div" >
 
-              <p>   This is a movie app built on React, where we can see all the
-                movies present in the imdb, and can see all the details of
-                individual movie. This app has different categories as
-                Trending, Movies, and TV Series and also this app has search
-                functionality.</p>
+              <p>   This is a clone of myntra.com which is the largest fashion e-commerce stores in India that deals with a wide range of fashion and lifestyle products for men, women, and kids. This is an Collaborative project which is created by our 3 members team...</p>
                 <h5 class="tech">Tech Stack</5>
                   <div class="tech_stack"><img src="./assets/img/HTML.png"  alt="" />
                     <img src="./assets/img/css.png" alt="" />
@@ -1099,7 +1095,7 @@ margin-top: 20px;
                   <button class="button1" >
 
                     <a
-                    href="https://github.com/kalesha58/fitzone-fitmore"
+                    href="https://github.com/sapna1309/Myntra-Clone"
                     className="btn"
                     target="_blank"
                     >
@@ -1109,7 +1105,7 @@ margin-top: 20px;
                 <button class="button2" >
 
                   <a
-                  href="https://kareemfitzone.pages.dev/"
+                  href="https://illegal-quiver-3898.vercel.app/"
                   className="btn btn-primary"
                   target="_blank"
                   >
@@ -1119,7 +1115,7 @@ margin-top: 20px;
               </div>
           </div>
 
-          <div class="work_img">
+          <!-- <div class="work_img">
             <img src="./assets/img/work3.jpg" alt="" />
             <h3>Fruits App</h3>
             <div class="desc_div" >
@@ -1280,8 +1276,8 @@ margin-top: 20px;
                 </a>
               </button>
               </div>
-          </div> -->
-        </div>
+          </div>
+        </div> -->
       </section>
 
       <!-- CONTACT SECTION -->
