--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="nav-menu" id="nav-menu"  >
           <ul class="nav_list">
             <li class="nav_items">
-              <a href="#home" class="nav_link active">Home</a>
+              <a href="#home" class="nav_link active nav-link.home">Home</a>
             </li>
             <li class="nav_items">
               <a href="#about" class="nav_link active">About</a>
