--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,8 @@ margin-top: 20px;
 </style>
 
       <!-- WORK SECTION -->
-      <section class="work section" id="work">
+      
+      <section class="work section" id="projects">
         <h2 class="section-title" data-aos="fade-down">Portfolio</h2>
 
         <div
