--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
 
         <div class="nav-menu" id="nav-menu"  >
           <ul class="nav_list">
-            <li class="nav_items">
+            <li class="nav_items nav-link">
               <a href="#home" class="nav_link active home">Home</a>
             </li>
-            <li class="nav_items">
+            <li class="nav_items nav-link">
               <a href="#about" class="nav_link active">About</a>
             </li>
-            <li class="nav_items">
+            <li class="nav_items nav-link">
               <a href="#skills" class="nav_link active">Skills</a>
             </li>
-            <li class="nav_items">
+            <li class="nav_items nav-link">
               <a href="#work" class="nav_link active">Work</a>
             </li>
-            <li class="nav_items">
+            <li class="nav_items nav-link">
               <a href="#contact" class="nav_link active">Contact</a>
             </li>
-            <li class="nav_items">
+            <li class="nav_items nav-link">
               <a href="" download="" class="nav_link active">Resume</a>
             </li>
           </ul>
