--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="nav-menu" id="nav-menu"  >
           <ul class="nav_list">
-            <li class="nav_items nav-link">
+            <li class="nav_items nav-link.home">
               <a href="#home" class="nav_link active home">Home</a>
             </li>
             <li class="nav_items nav-link">
