--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="nav bd_grid">
         <div>
-          <a href="#" class="nav_logo">Deepti</a>
+          <a href="#" class="nav_logo" id="user-detail-name" >Deepti</a>
         </div>
 
         <div class="nav-menu" id="nav-menu"  >
@@ -669,7 +669,7 @@
             </svg>
           </div>
 
-          <div>
+          <div id="user-detail-intro">
             <h2
               class="about_subtitle"
               data-aos="fade-down"
