--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="#" class="nav_logo" id="user-detail-name" >Deepti</a>
         </div>
 
-        <div class="nav-menu" id="nav-menu"  >
+        <div class="nav-menu " id="nav-menu"  >
           <ul class="nav_list">
             <li class="nav_items nav-link.home">
               <a href="#home" class="nav_link active home">Home</a>
@@ -32,7 +32,7 @@
               <a href="#skills" class="nav_link active">Skills</a>
             </li>
             <li class="nav_items nav-link">
-              <a href="#work" class="nav_link active">Work</a>
+              <a href="#work" class="nav_link active">Projects</a>
             </li>
             <li class="nav_items nav-link">
               <a href="#contact" class="nav_link active">Contact</a>
@@ -679,8 +679,7 @@
             </h2>
             <p class="about_text" data-aos="fade-down" data-aos-delay="450">
               My name is Deepti. I'm a full-stack web-developer in Masai
-              School, Benguluru. I am a B.Tech graduate in ECE love exploring new
-              technologies in the field of Web Development and always try to adapt
+              School, Benguluru. I love exploring new technologies in the field of Web Development and always try to adapt
               to it.I believe in the concept of continuous learning by regularly
               upgrading my skills and enhancing my knowledge.I have learned MERN
               stack, data structures, algorithms, and soft skills at Masai School.
