--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
         </div>
 
         <div class="nav-menu " id="nav-menu"  >
-          <ul class="nav_list">
-            <li class="nav_items nav-link.home">
-              <a href="#home" class="nav_link active home">Home</a>
+          <ul class="nav_list nav-link">
+            <li class="nav_items home">
+              <a href="#home" class="nav_link active ">Home</a>
             </li>
-            <li class="nav_items nav-link">
-              <a href="#about" class="nav_link active">About</a>
+            <li class="nav_items about">
+              <a href="#about" class="nav_link active ">About</a>
             </li>
-            <li class="nav_items nav-link">
+            <li class="nav_items skill">
               <a href="#skills" class="nav_link active">Skills</a>
             </li>
-            <li class="nav_items nav-link">
-              <a href="#work" class="nav_link active">Projects</a>
+            <li class="nav_items projects">
+              <a href="#projects" class="nav_link active">Projects</a>
             </li>
-            <li class="nav_items nav-link">
+            <li class="nav_items contact">
               <a href="#contact" class="nav_link active">Contact</a>
             </li>
-            <li class="nav_items nav-link">
+            <li class="nav_items ">
               <a href="" download="" class="nav_link active">Resume</a>
             </li>
           </ul>
