--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
         <div class="nav-menu " id="nav-menu"  >
           <ul class="nav_list nav-link">
-            <li class="nav_items home">
-              <a href="#home" class="nav_link active ">Home</a>
+            <li class="nav_items nav-link">
+              <a href="#home" class="nav_link active home ">Home</a>
             </li>
             <li class="nav_items about">
               <a href="#about" class="nav_link active ">About</a>
