--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
   <body>
     <!-- Header Section -->
     <header class="header">
-      <nav class="nav bd_grid">
+      <nav class="nav bd_grid nav-link">
         <div>
           <a href="#" class="nav_logo" id="user-detail-name" >Deepti</a>
         </div>
 
         <div class="nav-menu " id="nav-menu"  >
           <ul class="nav_list nav-link">
-            <li class="nav_items nav-link">
+            <li class="nav_items nav-link home">
               <a href="#home" class="nav_link active home ">Home</a>
             </li>
             <li class="nav_items about">
-              <a href="#about" class="nav_link active ">About</a>
+              <a href="#about" class="nav_link active  ">About</a>
             </li>
             <li class="nav_items skill">
               <a href="#skills" class="nav_link active">Skills</a>
