--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
               <a href="#home" class="nav_link active home ">Home</a>
             </li>
             <li class="nav_items about">
-              <a href="#about" class="nav_link active  ">About</a>
+              <a href="#about" class="nav_link active about ">About</a>
             </li>
             <li class="nav_items skill">
-              <a href="#skills" class="nav_link active">Skills</a>
+              <a href="#skills" class="nav_link active skill">Skills</a>
             </li>
             <li class="nav_items projects">
-              <a href="#projects" class="nav_link active">Projects</a>
+              <a href="#projects" class="nav_link active projects">Projects</a>
             </li>
             <li class="nav_items contact">
-              <a href="#contact" class="nav_link active">Contact</a>
+              <a href="#contact" class="nav_link active contact">Contact</a>
             </li>
             <li class="nav_items ">
               <a href="" download="" class="nav_link active">Resume</a>
