--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             <li class="nav_items nav-link home">
               <a href="#home" class="nav_link active home ">Home</a>
             </li>
-            <li class="nav_items about">
+            <li class="nav_items nav-link about">
               <a href="#about" class="nav_link active about ">About</a>
             </li>
-            <li class="nav_items skill">
+            <li class="nav_items nav-link skill">
               <a href="#skills" class="nav_link active skill">Skills</a>
             </li>
-            <li class="nav_items projects">
+            <li class="nav_items nav-link projects">
               <a href="#projects" class="nav_link active projects">Projects</a>
             </li>
-            <li class="nav_items contact">
+            <li class="nav_items nav-link contact">
               <a href="#contact" class="nav_link active contact">Contact</a>
             </li>
             <li class="nav_items ">
