--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <li class="nav_items nav-link about">
               <a href="#about" class="nav_link active about ">About</a>
             </li>
-            <li class="nav_items nav-link skill">
-              <a href="#skills" class="nav_link active skill">Skills</a>
+            <li class="nav_items nav-link skills">
+              <a href="#skills" class="nav_link active skills">Skills</a>
             </li>
             <li class="nav_items nav-link projects">
               <a href="#projects" class="nav_link active projects">Projects</a>
