--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <li class="nav_items nav-link contact">
               <a href="#contact" class="nav_link active contact">Contact</a>
             </li>
-            <li class="nav_items ">
-              <a href="" download="" class="nav_link active">Resume</a>
+            <li class="nav_items nav-link resume ">
+              <a href="" download="" class="nav_link active resume">Resume</a>
             </li>
           </ul>
         </div>
