--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@ margin-top: 20px;
           <div class="work_img project-card">
             <img src="./assets/img/work2.png" alt="" />
             <h3 class="project-title">Classic World</h3>
-            <div class="desc_div" >
+            <div class="desc_div project-description" >
 
               <p>   This is a clone of myntra.com which is the largest fashion e-commerce stores in India that deals with a wide range of fashion and lifestyle products for men, women, and kids. This is an Collaborative project which is created by our 3 members team...</p>
                 <h5 class="tech">Tech Stack</5>
@@ -1082,7 +1082,7 @@ margin-top: 20px;
           <div class="work_img project-card">
             <img src="./assets/img/boogy.png" alt="" />
             <h3 class="project-title">Boogy</h3>
-            <div class="desc_div" >
+            <div class="desc_div project-description" >
 
               <p>   This is a clone of bewakoof.com, Bewakoof is a lifestyle fashion brand that makes creative and top-notch apparel for trendy, contemporary Indians. This is an Collaborative project which is created by our 5 members team...</p>
                 <h5 class="tech">Tech Stack</5>
@@ -1121,7 +1121,7 @@ margin-top: 20px;
           <div class="work_img project-card">
             <img src="./assets/img/work1.png" alt="" />
             <h3 class="project-title">naukari.com</h3>
-            <div class="desc_div" >
+            <div class="desc_div project-description" >
 
               <p>This is the clone of the Naukri.com website, Naukri.com is a recruitment platform that provides hiring-related services to corporates/ recruiters, placement agencies and job seekers in India. This is an Collaborative project which is created by our 4 members team...  </p>
                 <h5 class="tech">Tech Stack</5>
@@ -1159,7 +1159,7 @@ margin-top: 20px;
           <div class="work_img project-card">
             <img src="./assets/img/glamourWorld.png" alt="" />
             <h3 class="project-title">GlamourWorld</h3>
-            <div class="desc_div" >
+            <div class="desc_div project-description" >
 
               <p>   This is a clone of nykaa.com which is an official online store for puchasing cosmetic items like creams , makeup ,tools & brushe etc. this is an individual project</p>
                 <h5 class="tech">Tech Stack</5>
