--- a/index.html
+++ b/index.html
@@ -1056,17 +1056,17 @@ margin-top: 20px;
                   </div>
                 </div>
                 <div className="portfolio__item-cta">
-                  <button class="button1 " >
+                  <button class="button1  project-github-link " >
 
                     <a
                     href="https://github.com/sapna1309/Myntra-Clone"
-                    className="btn project-github-link"
+                    className="btn "
                     target="_blank"
                     >
                     Github
                   </a>
                 </button>
-                <button class="button2" >
+                <button class="button2 project-deployed-link" >
 
                   <a
                   href="https://illegal-quiver-3898.vercel.app/"
@@ -1095,7 +1095,7 @@ margin-top: 20px;
                   </div>
                 </div>
                 <div className="portfolio__item-cta">
-                  <button class="button1" >
+                  <button class="button1 project-github-link" >
 
                     <a
                     href="https://github.com/devn5900/humane-governor-8062"
@@ -1105,7 +1105,7 @@ margin-top: 20px;
                     Github
                   </a>
                 </button>
-                <button class="button2" >
+                <button class="button2 project-deployed-link" >
 
                   <a
                   href="https://boogy-cw.vercel.app/"
@@ -1133,7 +1133,7 @@ margin-top: 20px;
                   </div>
                 </div>
                 <div className="portfolio__item-cta">
-                  <button class="button1" >
+                  <button class="button1 project-github-link" >
 
                     <a
                     href="https://github.com/alokkr11/snugly-lip-3676"
@@ -1143,7 +1143,7 @@ margin-top: 20px;
                     Github
                   </a>
                 </button>
-                <button class="button2" >
+                <button class="button2 project-deployed-link" >
 
                   <a
                   href="https://naukricom-clone.netlify.app/"
@@ -1172,7 +1172,7 @@ margin-top: 20px;
                   </div>
                 </div>
                 <div className="portfolio__item-cta">
-                  <button class="button1" >
+                  <button class="button1 project-github-link" >
 
                     <a
                     href="https://github.com/dipti1144/civic-maid-9961"
@@ -1182,7 +1182,7 @@ margin-top: 20px;
                     Github
                   </a>
                 </button>
-                <button class="button2" >
+                <button class="button2 project-deployed-link" >
 
                   <a
                   href="https://exquisite-boba-c919c7.netlify.app/"
