--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
   <body>
     <!-- Header Section -->
     <header class="header">
-      <nav class="nav bd_grid nav-link">
+      <nav class="nav bd_grid">
         <div>
-          <a href="#" class="nav_logo" id="user-detail-name" >Deepti</a>
+          <a href="#" class="nav_logo">Deepti</a>
         </div>
 
         <div class="nav_menu" id="nav_menu">
           <ul class="nav_list">
-            <li class="nav-link">
+            <li class="nav_items">
               <a href="#home" class="nav_link active">Home</a>
             </li>
-            <li class="nav-link">
+            <li class="nav_items">
               <a href="#about" class="nav_link active">About</a>
             </li>
-            <li class="nav-link">
+            <li class="nav_items">
               <a href="#skills" class="nav_link active">Skills</a>
             </li>
-            <li class="nav-link">
+            <li class="nav_items">
               <a href="#projects" class="nav_link active">Projects</a>
             </li>
-            <li class="nav-link">
+            <li class="nav_items">
               <a href="#contact" class="nav_link active">Contact</a>
             </li>
-            <li class="nav-link">
-              <a href="https://drive.google.com/file/d/1dpOJ34pbCxdVmbZV97BmKG_jxrlJiyKO/view?usp=sharing"  download="" target="_blank" class="nav_link active">Resume</a>
+            <li class="nav_items">
+              <a href="https://drive.google.com/file/d/1dpOJ34pbCxdVmbZV97BmKG_jxrlJiyKO/view?usp=sharing"  target="_blank" class="nav_link active" download > Resume</a>
             </li>
           </ul>
         </div>
