--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <li class="nav_items">
               <a href="#contact" class="nav_link active">Contact</a>
             </li>
-            <li class="nav_items">
-              <a href="https://drive.google.com/file/d/1dpOJ34pbCxdVmbZV97BmKG_jxrlJiyKO/view?usp=sharing"  target="_blank" class="nav_link active" download > Resume</a>
+            <li class="nav_items" id="resume-link-1" >
+              <a href="./assets/Deepti_Baghel_Resume.pdf"  target="_blank" class="nav_link active" download="Deepti_Baghel_Resume" > Resume</a>
             </li>
           </ul>
         </div>
@@ -57,7 +57,10 @@
             Hi,<br/> I'm <span class="home_title-color">Deepti <br/> </span
             > Full Stack Web Developer
           </h1>
-          <a href="https://drive.google.com/file/d/1dpOJ34pbCxdVmbZV97BmKG_jxrlJiyKO/view?usp=sharing"  target="_blank" download class="button"> Resume</a>
+          <!-- <a href="https://drive.google.com/file/d/1dpOJ34pbCxdVmbZV97BmKG_jxrlJiyKO/view?usp=sharing"  target="_blank" download class="button"> Resume</a> -->
+          <p class="button"  id="resume-link-2" >
+          <a href="./assets/Deepti_Baghel_Resume.pdf" target="_blank"  download="Deepti_Baghel_Resume" >Resume</a>
+        </p>
         </div>
 
         <div class="home_social">
