--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="#contact" class="nav_link active">Contact</a>
             </li>
             <li class="nav_items" id="resume-link-1" >
-              <a href="./assets/Deepti_Baghel_Resume.pdf"  target="_blank" class="nav_link active" download="Deepti_Baghel_Resume" > Resume</a>
+              <a href="./assets/Deepti_Baghel_Resume.pdf" id="resume-button-1"  target="_blank" class="nav_link active" download="Deepti_Baghel_Resume" > Resume</a>
             </li>
           </ul>
         </div>
@@ -59,7 +59,7 @@
           </h1>
           <!-- <a href="https://drive.google.com/file/d/1dpOJ34pbCxdVmbZV97BmKG_jxrlJiyKO/view?usp=sharing"  target="_blank" download class="button"> Resume</a> -->
           <p class="button"  id="resume-link-2" >
-          <a href="./assets/Deepti_Baghel_Resume.pdf" target="_blank"  download="Deepti_Baghel_Resume" >Resume</a>
+          <a href="./assets/Deepti_Baghel_Resume.pdf" id="resume-button-2" target="_blank"  download="Deepti_Baghel_Resume" >Resume</a>
         </p>
         </div>
 
