--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="#" class="nav_logo">Deepti</a>
         </div>
 
-        <div class="nav_menu" id="nav_menu">
+        <div class="nav _menu" id="nav_menu">
           <ul class="nav_list">
             <li class="nav_items">
               <a href="#home" class="nav_link active">Home</a>
@@ -67,11 +67,12 @@
           <a href="https://www.linkedin.com/in/deepti-baghel-a21541232/" target="_blank" class="home_social-icon"
             ><i class='bx bxl-linkedin' ></i></a>
           <a
+          id="contact-github"
             href="https://github.com/dipti1144"
             class="home_social-icon"
      
             target="_blank"
-            ><i class='bx bxl-github' ></i></a>
+            ><i  class='bx bxl-github' ></i></a>
         
         </div>
 
