--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="home_social">
-          <a href="https://www.linkedin.com/in/deepti-baghel-a21541232/" target="_blank" class="home_social-icon"
+          <a id="contact-linkedin" href="https://www.linkedin.com/in/deepti-baghel-a21541232/" target="_blank" class="home_social-icon"
             ><i class='bx bxl-linkedin' ></i></a>
           <a
           id="contact-github"
