--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="nav bd_grid">
         <div>
-          <a href="#" class="nav_logo">Deepti</a>
+          <a href="#"  class="nav_logo">Deepti</a>
         </div>
 
         <div class="nav _menu" id="nav_menu">
@@ -54,7 +54,7 @@
       <section class="home bd_grid" id="home">
         <div class="home_data" data-aos="fade-down">
           <h1 class="home_title">
-            Hi,<br/> I'm <span class="home_title-color">Deepti <br/> </span
+            Hi,<br/> I'm <span id="user-detail-name" class="home_title-color">Deepti <br/> </span
             > Full Stack Web Developer
           </h1>
           <!-- <a href="https://drive.google.com/file/d/1dpOJ34pbCxdVmbZV97BmKG_jxrlJiyKO/view?usp=sharing"  target="_blank" download class="button"> Resume</a> -->
