--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
           <a href="#"  class="nav_logo">Deepti</a>
         </div>
 
-        <div class="nav _menu" id="nav_menu">
+        <div class="nav _menu nav-menu" id="nav_menu">
           <ul class="nav_list">
             <li class="nav_items">
-              <a href="#home" class="nav_link active">Home</a>
+              <a href="#home" class="nav_link nav-link home active">Home</a>
             </li>
             <li class="nav_items">
-              <a href="#about" class="nav_link active">About</a>
+              <a href="#about" class="nav_link nav-link about active">About</a>
             </li>
             <li class="nav_items">
-              <a href="#skills" class="nav_link active">Skills</a>
+              <a href="#skills" class="nav_link nav-link skills active">Skills</a>
             </li>
             <li class="nav_items">
-              <a href="#projects" class="nav_link active">Projects</a>
+              <a href="#projects" class="nav_link nav-link projects active">Projects</a>
             </li>
             <li class="nav_items">
-              <a href="#contact" class="nav_link active">Contact</a>
+              <a href="#contact" class="nav_link nav-link contact active">Contact</a>
             </li>
-            <li class="nav_items" id="resume-link-1" >
+            <li class="nav_items nav-link resume ativec" id="resume-link-1" >
               <a href="./assets/Deepti_Baghel_Resume.pdf" id="resume-button-1"  target="_blank" class="nav_link active" download="Deepti_Baghel_Resume" > Resume</a>
             </li>
           </ul>
