--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             > -->
              <div class="about__me">
               <div class="about__me-image home-img">
-                <img  src="./assets/img/profile.jpg" width="60%" margin="auto" alt="">
+                <img  class="home-img"  src="./assets/img/profile.jpg" width="60%" margin="auto" alt="">
               
               </div>
             </div> 
