--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
       <section class="about section" id="about">
         <h2 class="section-title" data-aos="fade-down">About</h2>
 
-        <div class="about_container bd_grid">
+        <div class="about_container bd_grid about__me-image home-img">
           <div class="about_img" data-aos="fade-down" data-aos-delay="50">
             <!-- <svg
               id="fe80fb2b-bcaf-407e-919b-306adc32f78b"
@@ -402,8 +402,8 @@
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 1032 741.75278"
             > -->
-             <div class="about__me">
-              <div class="about__me-image home-img">
+             <div >
+              <div >
                 <img  class="home-img"  src="./assets/img/profile.jpg" width="60%" margin="auto" alt="profile">
               
               </div>
