--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="nav _menu nav-menu" id="nav_menu">
-          <ul class="nav_list" id="nav-menu">
+          <ul class="nav_list nav-menu" id="nav-menu">
             <li class="nav_items">
               <a href="#home" class="nav_link nav-link home active">Home</a>
             </li>
