--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="#"  class="nav_logo">Deepti</a>
         </div>
 
-        <div class="nav _menu nav-menu" id="nav_menu">
+        <div class="nav_menu " id="nav_menu">
           <ul class="nav_list nav-menu" id="nav-menu">
             <li class="nav_items">
               <a href="#home" class="nav_link nav-link home active">Home</a>
