--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li class="nav_items">
               <a href="#contact" class="nav_link nav-link contact active">Contact</a>
             </li>
-            <li class="nav_items nav-link resume ativec" id="resume-link-1" >
+            <li class="nav_items nav-link resume active" id="resume-link-1" >
               <a href="./assets/Deepti_Baghel_Resume.pdf" id="resume-button-1"  target="_blank" class="nav_link active" download="Deepti_Baghel_Resume" > Resume</a>
             </li>
           </ul>
