--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="#"  class="nav_logo">Deepti</a>
         </div>
 
-        <div class="nav_menu " id="nav_menu">
+        <div class="nav_menu nav-menu" id="nav_menu">
           <ul class="nav_list nav-menu" id="nav-menu">
             <li class="nav_items">
               <a href="#home" class="nav_link nav-link home active">Home</a>
@@ -37,7 +37,7 @@
             <li class="nav_items">
               <a href="#contact" class="nav_link nav-link contact active">Contact</a>
             </li>
-            <li class="nav_items nav-link resume active" id="resume-link-1" >
+            <li class="nav_items nav-link resume " id="resume-link-1" >
               <a href="./assets/Deepti_Baghel_Resume.pdf" id="resume-button-1"  target="_blank" class="nav_link active" download="Deepti_Baghel_Resume" > Resume</a>
             </li>
           </ul>
@@ -58,7 +58,7 @@
             > Full Stack Web Developer
           </h1>
           <!-- <a href="https://drive.google.com/file/d/1dpOJ34pbCxdVmbZV97BmKG_jxrlJiyKO/view?usp=sharing"  target="_blank" download class="button"> Resume</a> -->
-          <button class="button"  id="resume-link-2" >
+          <button  class="button"  id="resume-link-2" >
           <a href="./assets/Deepti_Baghel_Resume.pdf" id="resume-button-2" target="_blank"  download="Deepti_Baghel_Resume" >Resume</a>
         </button>
         </div>
