--- a/index.html
+++ b/index.html
@@ -682,10 +682,10 @@
               I'm Deepti
             </h2>
             <p class="about_text" data-aos="fade-down" data-aos-delay="450">
-              My name is Deepti. I'm a full-stack web-developer in Masai
+              My name is Deepti. I'm a full stack web developer in Masai
               School, Benguluru. I love exploring new technologies in the field of Web Development and always try to adapt
               to it.I believe in the concept of continuous learning by regularly
-              upgrading my skills and enhancing my knowledge.I have learned MERN
+              upgrading my skills and enhancing my knowledge.I have learned JavaScript, MongoDB, Express, React, Node
               stack, data structures, algorithms, and soft skills at Masai School.
             </p>
           </div>
