--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
               viewBox="0 0 1032 741.75278"
             > -->
              <div >
-              <div >
+              <div class="about_container bd_grid about__me-image home-img" >
                 <img  class="home-img"  src="./assets/img/profile.jpg" width="60%" margin="auto" alt="profile">
               
               </div>
@@ -685,7 +685,7 @@
               My name is Deepti. I'm a full stack web developer in Masai
               School, Benguluru. I love exploring new technologies in the field of Web Development and always try to adapt
               to it.I believe in the concept of continuous learning by regularly
-              upgrading my skills and enhancing my knowledge.I have learned JavaScript, MongoDB, Express, React, Node
+              upgrading my skills and enhancing my knowledge.I have learned JavaScript, MongoDB Express, React, Node
               stack, data structures, algorithms, and soft skills at Masai School.
             </p>
           </div>
