--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             > Full Stack Web Developer
           </h1>
           <!-- <a href="https://drive.google.com/file/d/1dpOJ34pbCxdVmbZV97BmKG_jxrlJiyKO/view?usp=sharing"  target="_blank" download class="button"> Resume</a> -->
-          <button  class="button"  id="resume-link-2" >
-          <a href="./assets/Deepti_Baghel_Resume.pdf" id="resume-button-2" target="_blank"  download="Deepti_Baghel_Resume" >Resume</a>
+          <button  class="button"  id="resume-button-2" >
+          <a href="./assets/Deepti_Baghel_Resume.pdf" id="resume-link-2" target="_blank"  download="Deepti_Baghel_Resume" >Resume</a>
         </button>
         </div>
 
