--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <li class="nav_items">
               <a href="#contact" class="nav_link nav-link contact active">Contact</a>
             </li>
-            <li class="nav_items nav-link resume " id="resume-link-1" >
-              <a href="./assets/Deepti_Baghel_Resume.pdf" id="resume-button-1"  target="_blank" class="nav_link active" download="Deepti_Baghel_Resume" > Resume</a>
+            <li class="nav_items nav-link resume " id="resume-button-1" >
+              <a href="./assets/Deepti_Baghel_Resume.pdf" id="resume-link-1"  target="_blank" class="nav_link active" download="Deepti_Baghel_Resume" > Resume</a>
             </li>
           </ul>
         </div>
