--- a/index.html
+++ b/index.html
@@ -391,10 +391,10 @@
       </section>
 
       <!-- ABOUT SECTION -->
-      <section class="about section" id="about">
+      <section class="about section about_container" id="about">
         <h2 class="section-title" data-aos="fade-down">About</h2>
 
-        <div class="about_container bd_grid about__me-image home-img">
+        <div class="bd_grid">
           <div class="about_img" data-aos="fade-down" data-aos-delay="50">
             <!-- <svg
               id="fe80fb2b-bcaf-407e-919b-306adc32f78b"
@@ -403,7 +403,7 @@
               viewBox="0 0 1032 741.75278"
             > -->
              <div >
-              <div class="about_container bd_grid about__me-image home-img" >
+              <div class="about__me-image" >
                 <img  class="home-img"  src="./assets/img/profile.jpg" width="60%" margin="auto" alt="profile">
               
               </div>
