--- a/index.html
+++ b/index.html
@@ -396,15 +396,15 @@
 
         <div class="bd_grid">
           <div class="about_img" data-aos="fade-down" data-aos-delay="50">
-            <!-- <svg
+            <svg
               id="fe80fb2b-bcaf-407e-919b-306adc32f78b"
               data-name="Layer 1"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 1032 741.75278"
-            > -->
+            >
              <div >
               <div class="about__me-image" >
-                <img  class="home-img"  src="./assets/img/profile.jpg" width="60%" margin="auto" alt="profile">
+                <img  class="home-img"  src="./assets/img/profile.jpg" width="100%" margin="auto" alt="profile">
               
               </div>
             </div> 
