--- a/index.html
+++ b/index.html
@@ -907,9 +907,10 @@ margin-top: 20px;
             <h3 class="project-title">GlamourWorld</h3>
             <div class="desc_div project-description" >
 
-              <p>   This is a clone of nykaa.com which is an official online store for puchasing cosmetic items like creams , makeup ,tools & brushe etc. this is an individual project</p>
+              <p>   This is a clone of nykaa.com which is an official online store for puchasing cosmetic items like creams , makeup ,tools & brushe etc. this is an individual project like creams , makeup ,tools & brushe etc. this is an individual project this is an individual project</p>
                 <h5 class="tech">Tech Stack</5>
-                  <div class="tech_stack"><img src="./assets/img/HTML.png"  alt="" />
+                  <div class="tech_stack">
+                    <img src="./assets/img/HTML.png"  alt="" />
                     <img src="./assets/img/css.png" alt="" />
                     <img src="./assets/img/js.png" alt="" />
                     <img src="./assets/img/react.png" alt="" />
