--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                     <div class="box">
                         <img class="projectImage" src="./images/myntra.png" alt="" width="100%" height="120%">
                         <div class="text">Classic world </div>
-                        <p>Zoomcar is an e-commerce company which allows individuals to rent from a diverse pool of cars
-                            by the hour or by the day</p>
+                        <p>Classic World is a clone of Myntra which is an e-commerce stores that deals with a wide range of fashion and lifestyle products.</p>
+                        <p style="color: blue;" >(Group Project)</p>
 
                         <div class="techstack">
                             <img src="https://chiranjeev-thapliyal.vercel.app/svg/reactjs.svg" alt="">
@@ -122,8 +122,8 @@
                     <div class="box">
                         <img class="projectImage" src="./images/boggy.png" alt="" width="100%" height="120%">
                         <div class="text">boogy</div>
-                        <p>Violeta is an operator of an online beauty shopping store created to buy skincare products
-                            based on people's hair and skin type and other </p>
+                        <p>boogy is a clone of Bewakoof® is a lifestyle fashion brand that makes creative, distinctive fashion for the trendy, contemporary Indian.</p>
+                        <p style="color: blue;" >(Group Project)</p>
                         <div class="techstack">
                             <img src="https://chiranjeev-thapliyal.vercel.app/svg/reactjs.svg" alt="">
                             <img class="chakra" style="padding: 10%;"
@@ -144,8 +144,8 @@
                     <div class="box">
                         <img class="projectImage" src="./images/naukari.png" alt="" width="100%" height="120%">
                         <div class="text">naukri.com</div>
-                        <p>It is an Indian e-commerce website which deals in cosmetics & beauty products online.It is a
-                            beauty retail company that sells cosmetic </p>
+                        <p>This is a clone of Naukri.com,which is an recruitment platform that provides hiring-related services to corporates, placement agencies and job seekers.</p>
+                        <p style="color: blue;" >(Group Project)</p>
                         <div class="techstack">
                             <img src="https://chiranjeev-thapliyal.vercel.app/svg/javascript.svg" alt="">
                             <img src="https://chiranjeev-thapliyal.vercel.app/svg/html-5.svg" alt="">
@@ -166,8 +166,8 @@
                     <div class="box">
                         <img class="projectImage" src="./images/glamourWorld.png" alt="" width="100%" height="120%">
                         <div class="text">GlamourWorld</div>
-                        <p>Nordstromrack is an Indian e-commerce website which provides the facility of Shopping online
-                            for shoes, clothing, jewelry, dresses, makeup and more from top brands at.</p>
+                        <p>This is a clone of nykaa.com which is an official online store for cosmetic items like creams, makeup, tools & brushe etc. this is an individual project</p>
+                        <p style="color: blue;" >(Individual Project)</p>
                         <div class="techstack">
                             <img src="https://chiranjeev-thapliyal.vercel.app/svg/reactjs.svg" alt="">
                             <img class="chakra" style="padding: 10%;"
